--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
             <button id="addbtn">Add Task</button>
             <button id="deletebtn">Delete Task</button>
             <button id="editbtn">Edit Task</button>
+            <ul id="task-list"></ul>
         </div>
     </div>  
-      <script src="index.js"></script> 
+    <script src="index.js"></script> 
 </body>
 </html>
